{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 29,
  "lineage": "af21ceac-cbbb-e5e0-89c8-5f950502d0c7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/natGateways/nat-secure-foundation",
            "idle_timeout_in_minutes": 4,
            "location": "centralus",
            "name": "nat-secure-foundation",
            "resource_group_name": "rg-secure-foundation",
            "resource_guid": "c0ce7c2b-5ac8-4ad2-bf7f-b87933fb50e9",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/natGateways/nat-secure-foundation|/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/publicIPAddresses/nat-gateway-pip",
            "nat_gateway_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/natGateways/nat-secure-foundation",
            "public_ip_address_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/publicIPAddresses/nat-gateway-pip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat",
            "azurerm_public_ip.nat_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkInterfaces/vm-secure-foundation-01-nic",
            "internal_domain_name_suffix": "snhbrx4qs5hedneiin1rlnmi1d.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "7C-ED-8D-09-A7-E8",
            "name": "vm-secure-foundation-01-nic",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "rg-secure-foundation",
            "virtual_machine_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Compute/virtualMachines/vm-secure-foundation-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-private",
            "location": "centralus",
            "name": "nsg-private",
            "resource_group_name": "rg-secure-foundation",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-internet-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "location": "centralus",
            "name": "nsg-public",
            "resource_group_name": "rg-secure-foundation",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-internet-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "private_deny_internet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-private/securityRules/deny-internet-inbound",
            "name": "deny-internet-inbound",
            "network_security_group_name": "nsg-private",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-secure-foundation",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "public_deny_internet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-public/securityRules/deny-internet-inbound",
            "name": "deny-internet-inbound",
            "network_security_group_name": "nsg-public",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-secure-foundation",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.170.254.198",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-bastion",
            "resource_group_name": "rg-secure-foundation",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/publicIPAddresses/nat-gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.212.175.228",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "nat-gateway-pip",
            "resource_group_name": "rg-secure-foundation",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-secure-foundation",
            "virtual_network_name": "vnet-secure-foundation"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private",
            "name": "snet-private",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-secure-foundation",
            "virtual_network_name": "vnet-secure-foundation"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-public",
            "name": "snet-public",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-secure-foundation",
            "virtual_network_name": "vnet-secure-foundation"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private",
            "nat_gateway_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/natGateways/nat-secure-foundation",
            "subnet_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private",
            "network_security_group_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-private",
            "subnet_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-public",
            "network_security_group_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "subnet_id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-public"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "df184e93-97d0-41ce-b488-437715b588db",
            "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation",
            "location": "centralus",
            "name": "vnet-secure-foundation",
            "resource_group_name": "rg-secure-foundation",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-public",
                "name": "snet-public",
                "security_group": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-public"
              },
              {
                "address_prefix": "10.10.2.0/24",
                "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/snet-private",
                "name": "snet-private",
                "security_group": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/networkSecurityGroups/nsg-private"
              },
              {
                "address_prefix": "10.10.3.0/26",
                "id": "/subscriptions/fd521475-76a6-479b-8f2e-73fe1b53d026/resourceGroups/rg-secure-foundation/providers/Microsoft.Network/virtualNetworks/vnet-secure-foundation/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}